# NapcatWsServer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  network_types.hpp
core/: bot_client.cpp  bot_client.h
logic/: command_router.cpp  command_router.h  common.hpp  logic_types.hpp
logic/message/: handle_message.cpp  handle_message.h
logic/notice/: handle_notice.cpp  handle_notice.h
net/: websocket_server.cpp  websocket_server.h
script/: relations.py
